--- a/imgui.ini
+++ b/imgui.ini
@@ -33,8 +33,7 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Select File]
-ViewportPos=780,60
-ViewportId=0x1FC56C61
+Pos=779,40
 Size=416,279
 Collapsed=0
 
@@ -63,7 +62,7 @@ Collapsed=0
 DockId=0x00000005,1
 
 [Docking][Data]
-DockSpace       ID=0x4AA66E39 Window=0x594557EE Pos=369,165 Size=1280,701 Split=Y
+DockSpace       ID=0x4AA66E39 Window=0x594557EE Pos=309,147 Size=1280,701 Split=Y
   DockNode      ID=0x00000005 Parent=0x4AA66E39 SizeRef=959,426 CentralNode=1 Selected=0x1C9B0A71
   DockNode      ID=0x00000006 Parent=0x4AA66E39 SizeRef=959,183 Split=X
     DockNode    ID=0x00000007 Parent=0x00000006 SizeRef=1292,183 Split=X Selected=0x59FE25BF
